# chafa.py

./: .cirrus.yml  .gitignore  README.md  TODO.md  formatter.py  hatch_build.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_wheels.yml  deliver_cirrus.yml  docs.yml
benchmarks/: bench.py  run_benchmark.sh
docs/: conf.py  index.rst  requirements.txt
docs/_chafa_img/: snake.html
docs/_scripts/: img_to_html.py
docs/_static/: custom.css  table.js
docs/api/: Canvas.rst  CanvasConfig.rst  FrameImagePlacement.rst  Functions.rst  Loader.rst  SymbolMap.rst  TermDb.rst  TermInfo.rst  api.rst  canvas.rst  canvas_config.rst  enums.rst
docs/usage/: examples.rst  installation.rst  tutorial.rst
docs/usage/examples/: aspect_ratio.rst  converting_to_html.rst  detecting_capabilities.rst  emitting_control_sequences.rst  emitting_sequences.rst  examples.rst  raw_color.rst  reading_an_image.rst  using_placement.rst
examples/: example_PIL.py  example_animation.py  example_aspect.py  example_auto_detect.py  example_detect.py  example_emit.py  example_html.py  example_placement.py  example_pyvips.py  example_raw_color.py  example_rows.py  example_simple.py  example_wand.py
src/chafa/: __init__.py  canvas.py  canvas_config.py  chafa.py  enums.py  frame.py  image.py  libraries.py  loader.py  placement.py  symbol_map.py  term_db.py  term_info.py
tests/: 0_PIL_test.py  1_aspect_test.py  2_raw_test.py  3_capabilities_test.py  4_new_similar_test.py  5_passthrough_test.py  6_print_rows_test.py
