[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name    = "chafa.py"
version = "1.0.1"
license = "LGPL-3.0"

authors = [
    { name="Erica Ferrua Edwardsdóttir", email="e@mage.black" }
]

description = "Python bindings for Chafa. Visualize images with text in python. "
readme = "README.md"

requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: Unix",
    'Operating System :: Microsoft :: Windows'
]


[project.urls]
"Homepage"    = "https://chafapy.mage.black"
"Source"      = "https://github.com/guardkenzie/chafa.py"
"Bug Tracker" = "https://github.com/guardkenzie/chafa.py/issues"

[tool.cibuildwheel]
build = "cp3*-*"
skip = ["*-manylinux_i686", "*-musllinux_*", "*-win32"]
manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.linux]
before-all = [
    "yum install -y libtool",
    "cd libs",
    "git clone https://github.com/hpjansson/chafa libchafa_src",
    "cd libchafa_src",
    "mkdir m4",
    "cp /usr/share/aclocal/pkg.m4 m4/",
    "./autogen.sh --without-tools",
    "make",
    "cd ../",
    "cp libchafa_src/chafa/.libs/*chafa.so linux/"
]

repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
before-all = [
    "NONINTERACTIVE=1 /bin/bash -c \"$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)\"",
    "brew install make libtool pkg-config glibc",
    "git clone https://github.com/hpjansson/chafa libchafa_src",
    "cd libchafa_src",
    "./autogen.sh --without-tools",
    "make",
    "cd ..",
    "cp libchafa_src/chafa/.libs/*chafa* libs/macos"
]


[tool.hatch.build]
exclude = [
    ".github",
    "wheelhouse"
]

[tool.hatch.build.targets.wheel]
packages=["src/chafa"]
strict-naming = false

[tool.hatch.build.targets.sdist]
strict-naming = false

[tool.hatch.build.targets.wheel.hooks.custom]
