[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name    = "chafa.py"
version = "1.2.0"
license = "LGPL-3.0"

authors = [
    { name="Erica Ferrua Edwardsdóttir", email="e@mage.black" }
]

description = "Python bindings for Chafa. Visualize images with text in python. "
readme = "README.md"

requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS"
]


[project.urls]
"Homepage"    = "https://chafapy.mage.black"
"Source"      = "https://github.com/guardkenzie/chafa.py"
"Bug Tracker" = "https://github.com/guardkenzie/chafa.py/issues"

[tool.cibuildwheel]
build = "cp3*-*"
skip  = ["*-manylinux_i686", "*-musllinux_*", "*-win32", "cp38-macosx_arm64"]
test-skip = "cp38-macosx*"
environment-pass = "CHAFA_VERSION"

manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

test-requires = ["pytest", "Pillow"]
test-command  = "pytest -rP {package}/tests"


[tool.cibuildwheel.linux]
before-all = [
    "dnf group install -y 'Development Tools'",
    "dnf install -y epel-release",
    "dnf install -y ImageMagick-devel glib2-devel pkgconf-pkg-config",
    "cd libs",
    "git clone --branch $CHAFA_VERSION https://github.com/hpjansson/chafa libchafa_src",
    "cd libchafa_src",
    "mkdir m4",
    "cp /usr/share/aclocal/pkg.m4 m4/",
    "./autogen.sh --without-tools",
    "make",
    "cd ../",
    "cp libchafa_src/chafa/.libs/*chafa.so linux/"
]

repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

# [[tool.cibuildwheel.overrides]]
# select = "*linux_aarch64"

# before-all = [
#     "yum group install -y 'Development Tools'",
#     "yum install -y epel-release",
#     "yum install -y ImageMagick-devel",
#     "cd libs",
#     "git clone --branch $CHAFA_VERSION https://github.com/hpjansson/chafa libchafa_src",
#     "cd libchafa_src",
#     "mkdir m4",
#     "cp /usr/share/aclocal/pkg.m4 m4/",
#     "./autogen.sh --without-tools",
#     "make",
#     "cd ../",
#     "cp libchafa_src/chafa/.libs/*chafa.so linux/"
# ]


[tool.cibuildwheel.macos]

environment = { MACOSX_DEPLOYMENT_TARGET="13.0" }

before-all = [
    "NONINTERACTIVE=1 /bin/bash -c \"$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)\"",
    "brew install --force --overwrite make imagemagick libtool pkg-config glib automake",
    "ln -s $(which glibtoolize) /usr/local/bin/libtoolize",
    "git clone --branch $CHAFA_VERSION https://github.com/hpjansson/chafa libchafa_src",
    "cd libchafa_src",
    "./autogen.sh --without-tools",
    "gmake",
    "cd ..",
    "cp libchafa_src/chafa/.libs/*chafa*.dylib libs/macos"
]

test-command = "MAGICK_HOME=/usr/local/Cellar/imagemagick/ pytest -rP {package}/tests"


[[tool.cibuildwheel.overrides]]
select = "*macosx_arm64"

environment = { MACOSX_DEPLOYMENT_TARGET="14.0" }

before-all = [
    "brew install make libtool pkg-config glib automake imagemagick",
    "sudo ln -s $(which glibtoolize) /usr/local/bin/libtoolize",
    "git clone --branch $CHAFA_VERSION https://github.com/hpjansson/chafa libchafa_src",
    "cd libchafa_src",
    "./autogen.sh --without-tools",
    "make",
    "cd ..",
    "cp libchafa_src/chafa/.libs/*chafa*.dylib libs/macos"
]

test-command = "MAGICK_HOME=/opt/homebrew/Cellar/imagemagick pytest -rP {package}/tests"


[tool.cibuildwheel.windows]

before-all = [
    "cp libchafa_src\\chafa\\.libs\\libchafa-0.dll libs\\windows\\"
]

test-command = "pytest -rP {package}/tests/0_PIL_test.py {package}/tests/2_raw_test.py {package}/tests/3_capabilities_test.py {package}/tests/4_new_similar_test.py"

[tool.hatch.build]
exclude = [
    ".github",
    "wheelhouse",
    ".cirrus.yml"
]

[tool.hatch.build.targets.wheel]
packages=["src/chafa"]
strict-naming = false
macos-max-compat = false

[tool.hatch.build.targets.sdist]
strict-naming = false

[tool.hatch.build.targets.wheel.hooks.custom]
